Add post params for metaexists
